--- a/layouts/partials/parts/sidebar.html
+++ b/layouts/partials/parts/sidebar.html
@@ -2,6 +2,7 @@
     <div id="sidebar-title">
         <img id="sidebar-title-logo" src="/images/{{ $.Site.Params.logo }}">
         <a id="sidebar-title-home" href="/">{{ .Site.Title }}</a>
+        {{.Site.description }}
         <ul id="sidebar-social-links">
             {{ range $item := .Site.Params.socialIcons -}}
             <a href="{{ $item.url }}">
